Use arrows for game instead

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
       <div class="question"></div>
       <div class="answer"></div>
       <div class="helpers">
-        "N" For next question
+        "Right arrow" For next question
         <br />
-		    "A" To toggle the answer
+		    "Up arrow" To toggle the answer
         <br />
-        "B" For previous question
+        "Left arrow" For previous question
       </div>
       <div class="m-helpers">
         <div class="prev">
